--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,8 +38,12 @@ jobs:
       - name: Set up virtualenv
         run: |
           pip list
-          pip install --user --upgrade codecov tox setuptools
+          pip install --upgrade codecov tox setuptools
           pip list
+          echo $PATH
+          which python
+          which pip
+          which tox
 
       - name: Run tox
         run: tox
