Do show-tool-versions in a separate step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,9 @@ jobs:
           pip list
           pip install --upgrade codecov tox setuptools
           pip list
-          python misc/build_helpers/show-tool-versions.py
+
+      - name: Display tool versions
+        run: python misc/build_helpers/show-tool-versions.py
 
       - name: Run tox
         run: tox
