--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,9 +37,9 @@ jobs:
 
       - name: Install Python packages
         run: |
-          pip list
-          pip install --upgrade codecov tox setuptools
-          pip list
+          virtualenv venv
+          venv/bin/pip install --upgrade codecov tox setuptools
+          venv/bin/pip list
 
       - name: Display tool versions
         run: python misc/build_helpers/show-tool-versions.py
