Rename job "build" to "run-tests"

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ on:
     - cron: '21 3 * * *'
 
 jobs:
-  build:
+  run-tests:
     runs-on: ${{ matrix.os }}
     strategy:
       max-parallel: 5
