--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,8 +16,9 @@ jobs:
       max-parallel: 5
       matrix:
         os:
-          # - ubuntu-latest
+          - ubuntu-latest
           - macos-latest
+          - windows-latest
         python-version:
           - 2.7
     steps:
