--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       max-parallel: 5
+      fail-fast: false
       matrix:
         os:
           - ubuntu-latest
