Run py27, py27 coverage tests when using Python 2.7

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,9 +58,11 @@ jobs:
           python misc/build_helpers/show-tool-versions.py
 
       - name: Run tox -e py27
+        if: matrix.python-version == '2.7'
         run: tox -e py27
 
       - name: Run tox -e py27-coverage
+        if: matrix.python-version == '2.7'
         run: tox -e py27-coverage
 
       - name: Run tox -e pyinstaller
