--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ jobs:
           - windows-latest
         python-version:
           - 2.7
+          - pypy2
 
     steps:
 
@@ -63,6 +64,14 @@ jobs:
       - name: Run tox -e py27-coverage
         if: matrix.python-version == '2.7'
         run: tox -e py27-coverage
+
+      - name: Run tox -e pypy27
+        if: matrix.python-version == 'pypy2'
+        run: tox -e pypy27
+
+      - name: Run tox -e pypy27-coverage
+        if: matrix.python-version == 'pypy2'
+        run: tox -e pypy27-coverage
 
       - name: Run tox -e pyinstaller
         run: tox -e pyinstaller
