Rename "run-tests" job to "test"
GitHub's side bar will be a little more readable because text will be
a little less truncated.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ on:
     - cron: '21 3 * * *'
 
 jobs:
-  run-tests:
+  test:
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
