--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,9 +29,9 @@ jobs:
       # https://github.com/crazy-max/ghaction-chocolatey
       - name: Install MSVC 9.0 for Python 2.7 on Windows
         if: matrix.os == 'windows-latest' && matrix.python-version == '2.7'
-        uses: "crazy-max/ghaction-chocolatey@v1"
+        uses: crazy-max/ghaction-chocolatey@v1
         with:
-          args: "install vcpython27"
+          args: install vcpython27
 
       - name: Check out Tahoe-LAFS sources
         uses: actions/checkout@v2
@@ -65,8 +65,8 @@ jobs:
         run: tox -e pyinstaller
 
       - name: Upload eliot.log in case of failure
-        uses: "actions/upload-artifact@v1"
-        if: "failure()"
+        uses: actions/upload-artifact@v1
+        if: failure()
         with:
-          name: "eliot.log"
-          path: "eliot.log"
+          name: eliot.log
+          path: eliot.log
