--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,8 +50,7 @@ jobs:
           pip list
 
       - name: Display tool versions
-        run: |
-          python misc/build_helpers/show-tool-versions.py
+        run: python misc/build_helpers/show-tool-versions.py
 
       - name: Run tox -e py27
         if: matrix.python-version == '2.7'
