--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
         os:
           - macos-latest
           - windows-latest
-          - ubuntu-latets
+          - ubuntu-latest
         python-version:
           - 2.7
 
