Run "tox -e codechecks"

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,9 @@ jobs:
       - name: Display tool versions
         run: python misc/build_helpers/show-tool-versions.py
 
+      - name: Run tox -e codechecks
+        run: tox -e codechecks
+
       - name: Run tox -e py27
         if: matrix.python-version == '2.7'
         run: tox -e py27
