--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,10 +52,9 @@ jobs:
       - name: Display tool versions
         run: python misc/build_helpers/show-tool-versions.py
 
-      # codechecks seems to be broken, so we continue-on-error.
-      - name: Run "tox -e codechecks"
-        run: tox -e codechecks
-        continue-on-error: true
+      # # codechecks throws type error; disable for now.
+      # - name: Run "tox -e codechecks"
+      #   run: tox -e codechecks
 
       - name: Run "tox -e py27"
         if: matrix.python-version == '2.7'
