--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,9 +52,10 @@ jobs:
       - name: Display tool versions
         run: python misc/build_helpers/show-tool-versions.py
 
-      # # codechecks throws type error; disable for now.
-      # - name: Run "tox -e codechecks"
-      #   run: tox -e codechecks
+      # codechecks throws type error; disable for now.
+      - name: Run "tox -e codechecks"
+        env: LANG=UTF-8
+        run: tox -e codechecks
 
       - name: Run "tox -e py27"
         if: matrix.python-version == '2.7'
