Continue if/when codechecks failes

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,6 +64,7 @@ jobs:
         env:
           LANG: 'UTF-8'
         run: tox -e codechecks
+        continue-on-error: true
 
       - name: Run "tox -e py27"
         if: matrix.python-version == '2.7'
