--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,8 +86,8 @@ jobs:
       # Set Codecov token inside Project Settings > Secrets as
       # CODECOV_TOKEN.
       - name: Upload coverage report
-        if: secrets && secrets.CODECOV_TOKEN
         uses: codecov/codecov-action@v1
+        if: ${{ secrets.CODECOV_TOKEN }}
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           file: coverage.xml
