--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,13 +51,13 @@ jobs:
 
       - name: Display tool versions
         run: python misc/build_helpers/show-tool-versions.py
-        
+
       - name: Display environment variables
         shell: python
         run: |
           import os
           import pprint
-          pprint.pprint(dict(os.environ))   
+          pprint.pprint(dict(os.environ))
 
       # codechecks throws type error; disable for now.
       - name: Run "tox -e codechecks"
@@ -91,3 +91,50 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           file: coverage.xml
+
+# Integration tests require `tor-gencert`, so we just run them on
+# Ubuntu for now.
+jobs:
+  intergation:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os:
+          - ubuntu-latest
+        python-version:
+          - 2.7
+
+    steps:
+
+      - name: Install tor
+        run: sudo apt install tor
+
+      - name: Check out Tahoe-LAFS sources
+        uses: actions/checkout@v2
+
+      - name: Fetch all history for all tags and branches
+        run: git fetch --prune --unshallow
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v1
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install Python packages
+        run: |
+          pip install --upgrade codecov tox setuptools
+          pip list
+
+      - name: Display tool versions
+        run: python misc/build_helpers/show-tool-versions.py
+
+      - name: Run "tox -e integration"
+        run: tox -e integration
+
+      - name: Upload eliot.log in case of failure
+        uses: actions/upload-artifact@v1
+        if: failure()
+        with:
+          name: eliot.log
+          path: eliot.log
