--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -19,20 +19,33 @@ jobs:
       fail-fast: false
       matrix:
         os:
-          - ubuntu-latest
           - macos-latest
+          - windows-latest
+          - ubuntu-latest
         python-version:
           - 2.7
 
     steps:
 
-      - name: Install tor [Ubuntu]
+      - name: Install Tor [Ubuntu]
         if: matrix.os == 'ubuntu-latest'
         run: sudo apt install tor
 
-      - name: Install tor [macOS]
+      - name: Install Tor [macOS]
         if: matrix.os == 'macos-latest'
         run: brew install tor
+
+      - name: Install Tor [Windows]
+        if: matrix.os == 'windows-latest'
+        uses: crazy-max/ghaction-chocolatey@v1
+        with:
+          args: install tor
+
+      - name: Install MSVC 9.0 for Python 2.7 [Windows]
+        if: matrix.os == 'windows-latest' && matrix.python-version == '2.7'
+        uses: crazy-max/ghaction-chocolatey@v1
+        with:
+          args: install vcpython27
 
       - name: Check out Tahoe-LAFS sources
         uses: actions/checkout@v2
