--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,7 +107,7 @@ jobs:
 
       - name: Install Tor [Ubuntu]
         if: matrix.os == 'ubuntu-latest'
-        run: sudo apt install tor strace
+        run: sudo apt install tor
 
       - name: Install Tor [macOS]
         if: matrix.os == 'macos-latest'
@@ -145,7 +145,7 @@ jobs:
         run: python misc/build_helpers/show-tool-versions.py
 
       - name: Run "tox -e integration"
-        run: strace -f tox -e integration
+        run: tox -e integration
 
       - name: Upload eliot.log in case of failure
         uses: actions/upload-artifact@v1
