Run packaging tests on Windows and Ubuntu

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -161,6 +161,8 @@ jobs:
       matrix:
         os:
           - macos-latest
+          - windows-latest
+          - ubuntu-latest
         python-version:
           - 2.7
 
