Pass posargs to py.test when running integration tests
Running "tox -e integration" takes a while.  It would be helpful to
run tests from just one file.  With this change, we can do that, like
so:

  $ tox -e integration -- integration/test_web.py

Or even just one test, like so:

  $ tox -e integration -- integration/test_web.py::test_index

With this investigating failing integration tests will be a little
easier, hopefully.

Fixes: ticket:3285

--- a/tox.ini
+++ b/tox.ini
@@ -53,7 +53,7 @@ setenv =
          COVERAGE_PROCESS_START=.coveragerc
 commands =
 	 # NOTE: 'run with "py.test --keep-tempdir -s -v integration/" to debug failures'
-	 py.test --coverage -v integration/
+	 py.test --coverage -v {posargs:integration}
          coverage combine
          coverage report
 
